@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.scrapetube" name="Scrapetube" version="2.3.1" provider-name="dermasmid, Twilight0">
+<addon id="script.module.scrapetube" name="Scrapetube" version="2.3.1.1" provider-name="dermasmid, Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.requests" version="2.19.1"/>
@@ -11,11 +11,11 @@
         <platform>all</platform>
         <license>MIT License</license>
         <source>https://github.com/Twilight0/script.module.scrapetube</source>
-        <news>[B]2.3.1[/B]
+        <news>[B]2.3.1.X[/B]
 - Some fixes brought from upstream
 - Removed is_py3 as it was not used
 
-[B]2.2.2.Χ[/B]
+[B]2.2.2.X[/B]
 Copied from upstream (version 2.2.2): https://github.com/dermasmid/scrapetube
 Changes made:
 1) Backported to work on Python 2.7
