@@ -1,3 +1,5 @@
+# -*- coding: utf-8 -*-
+
 from .scrapetube import get_channel, get_search, get_playlist, get_videos
 
-__version__ = "2.2.2"
+__version__ = "2.3.1"
