@@ -1,19 +1,15 @@
 # -*- coding: utf-8 -*-
-
-'''
-    Scrapetube library
-    Author dermasmid, Twilight0
-
-    SPDX-License-Identifier: MIT Licence
-    See LICENSE for more information.
-'''
+# Scrapetube wrapper for Kodi
+# SPDX-License-Identifier: GPL-3.0
+# See LICENSES/GPL-3.0 for more information.
 
 from __future__ import absolute_import
+from .scrapetube import get_videos, get_channel, get_playlist, get_search
 
-from scrapetube import get_videos, get_channel, get_playlist, get_search
-
-
-yt_prefix = 'https://www.youtube.com/watch?v={0}'
+YT_ADDON_ID = 'plugin.video.youtube'
+YT_ADDON = 'plugin://{0}'.format(YT_ADDON_ID)
+YT_ADDON = ''.join([YT_ADDON, '/play/?video_id={0}'])
+YT_PREFIX = 'https://www.youtube.com/watch?v={0}'
 
 
 def duration_converter(duration):
@@ -31,14 +27,14 @@ def duration_converter(duration):
 
 def list_channel_videos(
     channel_id=None, channel_url=None, limit=None, sleep=1, sort_by="newest",
-    add_prefix=True, thumb_quality=-1
+    add_prefix=True, thumb_quality=-1, add_url=YT_PREFIX
 ):
 
-    items_list = list(get_channel(channel_id, channel_url, limit, sleep, sort_by))
+    items_list = list(get_channel(channel_id, channel_url, limit, sleep, sort_by=sort_by))
 
     items_list = [
         dict(
-            title=i['title']['runs'][0]['text'], url=yt_prefix.format(i['videoId']) if add_prefix else i['videoId'],
+            title=i['title']['runs'][0]['text'], url=add_url.format(i['videoId']) if add_prefix else i['videoId'],
             image=i['thumbnail']['thumbnails'][thumb_quality]['url'],
             duration=duration_converter(i['thumbnailOverlays'][0]['thumbnailOverlayTimeStatusRenderer']['text']['simpleText'])
             ) for i in items_list
@@ -61,13 +57,13 @@ def list_playlists(
     ]
 
 
-def list_playlist_videos(url, limit=None, sleep=1, add_prefix=True, thumb_quality=-1):
+def list_playlist_videos(url, limit=None, sleep=1, add_prefix=True, thumb_quality=-1, add_url=YT_PREFIX):
 
     items_list = list(get_playlist(url, limit, sleep))
 
     items_list = [
         dict(
-            title=i['title']['runs'][0]['text'], url=yt_prefix.format(i['videoId']) if add_prefix else i['videoId'],
+            title=i['title']['runs'][0]['text'], url=add_url.format(i['videoId']) if add_prefix else i['videoId'],
             image=i['thumbnail']['thumbnails'][thumb_quality]['url'],
             duration=duration_converter(i['thumbnailOverlays'][0]['thumbnailOverlayTimeStatusRenderer']['text']['simpleText'])
             ) for i in items_list
@@ -77,7 +73,7 @@ def list_playlist_videos(url, limit=None, sleep=1, add_prefix=True, thumb_qualit
 
 
 def list_search(
-    query, limit=None, sleep=1, sort_by="relevance", results_type="video", add_prefix=True, thumb_quality=-1
+    query, limit=None, sleep=1, sort_by="relevance", results_type="video", add_prefix=True, thumb_quality=-1, add_url=YT_PREFIX
 ):
 
     items_list = list(get_search(query, limit, sleep, sort_by, results_type))
@@ -86,13 +82,11 @@ def list_search(
 
         items_list = [
         dict(
-            title=i['title']['runs'][0]['text'], url=yt_prefix.format(i['videoId']) if add_prefix else i['videoId'],
+            title=i['title']['runs'][0]['text'], url=add_url.format(i['videoId']) if add_prefix else i['videoId'],
             image=i['thumbnail']['thumbnails'][thumb_quality]['url'],
             duration=duration_converter(i['thumbnailOverlays'][0]['thumbnailOverlayTimeStatusRenderer']['text']['simpleText'])
             ) for i in items_list
         ]
-
-        print(items_list)
 
         return items_list
 
